@@ -350,34 +350,33 @@ class ConfigPanel(eclib.ControlBox):
                       key=unicode.lower)
         uninstalled = Profile_Get('UNINSTALL_PLUGINS', default=list())
 
-        for item in keys:
-            val = config[item]
-            self._list.Freeze()
-            mod = sys.modules.get(item)
-            dist = p_mgr.GetPluginDistro(item)
-            if dist is not None:
-                item = dist.project_name
-                version = dist.version
-            else:
-                version = str(getattr(mod, '__version__', _("Unknown")))
+        with eclib.Freezer(self._list) as _tmp:
+            for item in keys:
+                val = config[item]
+                mod = sys.modules.get(item)
+                dist = p_mgr.GetPluginDistro(item)
+                if dist is not None:
+                    item = dist.project_name
+                    version = dist.version
+                else:
+                    version = str(getattr(mod, '__version__', _("Unknown")))
 
-            pdata = PluginData()
-            pdata.SetName(item)
-            desc = getattr(mod, '__doc__', None)
-            if not isinstance(desc, basestring):
-                desc = _("No Description Available")
-            pdata.SetDescription(desc.strip())
-            pdata.SetAuthor(getattr(mod, '__author__', _("Unknown")))
-            pdata.SetVersion(version)
-            pdata.SetDist(dist)
-            pbi = PBPluginItem(self._list, mod, pdata, None)
+                pdata = PluginData()
+                pdata.SetName(item)
+                desc = getattr(mod, '__doc__', None)
+                if not isinstance(desc, basestring):
+                    desc = _("No Description Available")
+                pdata.SetDescription(desc.strip())
+                pdata.SetAuthor(getattr(mod, '__author__', _("Unknown")))
+                pdata.SetVersion(version)
+                pdata.SetDist(dist)
+                pbi = PBPluginItem(self._list, mod, pdata, None)
 
-            pbi.SetChecked(val)
-            util.Log("[pluginmgr][info] Adding %s to list" % item)
-            self._list.AppendItem(pbi)
-            if pbi.GetInstallPath() in uninstalled:
-                pbi.Enable(False)
-            self._list.Thaw()
+                pbi.SetChecked(val)
+                util.Log("[pluginmgr][info] Adding %s to list" % item)
+                self._list.AppendItem(pbi)
+                if pbi.GetInstallPath() in uninstalled:
+                    pbi.Enable(False)
 
         self._list.SendSizeEvent()
         return self._list.GetItemCount()
@@ -405,26 +404,25 @@ class ConfigPanel(eclib.ControlBox):
         bmp = wx.ArtProvider.GetBitmap(wx.ART_ERROR, wx.ART_TOOLBAR, (32, 32))
         msg = _("This plugin requires a newer version of Editra.")
 
-        for item in keys:
-            val = errors[item]
-            self._list.Freeze()
-            mod = sys.modules.get(val)
-            dist = p_mgr.GetPluginDistro(item)
-            if dist is not None:
-                item = dist.project_name
-                version = dist.version
-            else:
-                version = unicode(getattr(mod, '__version__', _("Unknown")))
+        with eclib.Freezer(self._list) as _tmp:
+            for item in keys:
+                val = errors[item]
+                mod = sys.modules.get(val)
+                dist = p_mgr.GetPluginDistro(item)
+                if dist is not None:
+                    item = dist.project_name
+                    version = dist.version
+                else:
+                    version = unicode(getattr(mod, '__version__', _("Unknown")))
 
-            pin = PluginData()
-            pin.SetName(item)
-            pin.SetAuthor(getattr(mod, '__author__', _("Unknown")))
-            pin.SetVersion(version)
-            pin.SetDist(dist)
-            pbi = PluginErrorItem(self._list, pin, msg, bmp=bmp)
+                pin = PluginData()
+                pin.SetName(item)
+                pin.SetAuthor(getattr(mod, '__author__', _("Unknown")))
+                pin.SetVersion(version)
+                pin.SetDist(dist)
+                pbi = PluginErrorItem(self._list, pin, msg, bmp=bmp)
 
-            self._list.AppendItem(pbi)
-            self._list.Thaw()
+                self._list.AppendItem(pbi)
 
         self._list.SendSizeEvent()
         return self._list.GetItemCount()
@@ -637,14 +635,11 @@ class DownloadPanel(eclib.ControlBox):
         """
         if self._list.GetItemCount():
             self._list.DeleteAllItems()
-
         pins = sorted([ name for name in self._p_list.keys() ], key=unicode.lower)
-        self.Freeze()
-        for item in pins:
-            pbi = PBDownloadItem(self._list, self._p_list[item], None)
-            self._list.AppendItem(pbi)
-
-        self.Thaw()
+        with eclib.Freezer(self) as _tmp:
+            for item in pins:
+                pbi = PBDownloadItem(self._list, self._p_list[item], None)
+                self._list.AppendItem(pbi)
         self._list.SendSizeEvent()
         return self._list.GetItemCount()
 
